--- a/style/styles.css
+++ b/style/styles.css
@@ -39,7 +39,7 @@ body {
 
 img[title='producer'] {
   width: 100%;
-  padding-top: 42%;
+  /* padding-top: 42%; */
   /* height: auto; */
 }
 
@@ -58,10 +58,15 @@ p[title='two__left_p'] {
 }
 
 
-@media screen and (max-width: 992px) {
+@media  (max-width: 1279px) {
   .wrapper {
-    max-width: 700px;
+    max-width: 992px;
     /* padding: 0px 30px 0 30px; */
+  }
+
+  .row__two {
+    display: flex;
+    justify-content: space-around;
   }
 
   p[title='two__left_p'] {
@@ -72,12 +77,21 @@ p[title='two__left_p'] {
     font-size: 46px;
   }
 
-  .main__row__two_right {
-    flex-basis: 20%;
+  .main__row__two_left {
+    flex-basis: 36%;
+  } 
+  
+  img[title='producer'] {
+    width: 100%;
+    height: auto;
   }
+  /* .main__row__two_left {
+    flex-basis: 70%;
+  } */
 }
 
-@media screen and (max-width: 320px) {
+
+@media screen and (max-width: 791px) {
   .wrapper {
     max-width: 320px;
     /* padding: 0px 30px 0 30px; */
@@ -86,7 +100,7 @@ p[title='two__left_p'] {
 
   .row__two {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
   }
 
 
@@ -100,15 +114,15 @@ p[title='two__left_p'] {
 
 
   .main__row__two_right {
-    justify-content:flex-end;
+    justify-content: flex-end;
   }
 
 
-  img[title='producer'] {
+   img[title='producer'] {
     width: 60%;
     padding-top: 1%;
     /* height: auto; */
-  }
+  } 
 }
 
 
