all done need to test

--- a/style/styles.css
+++ b/style/styles.css
@@ -119,7 +119,7 @@ body {
 
 .section__two__right_block img,
 .section__four__right_block img {
-  width: 100%;
+  width: 90%;
 }
 
 /*
@@ -219,7 +219,7 @@ body {
 .user__card {
   max-width: 791px;
   height: auto;
-  margin: 34px 0 111px 126px;
+  margin: 34px 423px 111px 126px;
   border-radius: 30px;
   background-color: white;
 }
@@ -252,6 +252,18 @@ body {
   flex-direction: column;
 }
 
+.section_ten__title {
+  margin: 179px 0 0 122px;
+}
+
+.course__info {
+  margin: 54px 0 0 122px;
+}
+
+.course__info span {
+  display: block;
+}
+
 .price {
   font-weight: 400;
   font-size: 80px;
@@ -260,14 +272,80 @@ body {
 
 .suggestion {
   display: flex;
+  justify-content: flex-start;
 
 }
 
-.tag_size {
-  flex: 0 1 33.333%;
-  margin-right: 50px;
+.suggestion__row {
+  margin: 0 12px 185px 0;
 }
 
+.aditi_marg {
+  margin-left: 122px;
+}
+
+/*
+  FOOTER
+*/
+
+.footer__wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: auto;
+  background-color: black;
+}
+
+.footer__left {
+  margin: 0 0 0 122px;
+}
+
+.footer__right {
+  margin: 59px 185px 0 0;
+}
+
+.cont_number {
+  display: inline block;
+}
+
+.fa-brands,
+.copyright__one,
+.cont_number,
+.email {
+  color: white;
+}
+
+.copyright__one {
+  display: block;
+}
+
+.copyright__two {
+  display: none;
+}
+.footer__logo {
+  margin-bottom: 29px;
+}
+
+.socials {
+  margin-bottom: 147px;
+}
+
+.fa-duotone,
+.text_info {
+  display: inline-block;
+}
+
+.fa-duotone,
+.text_info {
+  display: inline-block;
+
+}
+
+.text_info {
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 101.38%;
+}
 
 @media (max-width: 1279px) {
   .wrapper {
@@ -275,13 +353,36 @@ body {
     /* padding: 0px 30px 0 30px; */
   }
 
+  .text__small {
+    font-size: 11px;
+  }
+
+  .text__medium {
+    font-size: 14px;
+  }
+
+  .text__big {
+    font-size: 17px;
+  }
+
+  /* TITLE*/
+
+  .title__small {
+    font-size: 15px;
+  }
+
+  .title__medium {
+    font-size: 32px;
+  }
+
+  .title__big {
+    font-size: 46px;
+  }
+
+  /* SECTION 1 */
   .section__one,
   .section__four {
     margin-top: 44.6px;
-  }
-
-  .section_one_p {
-    font-size: 12px;
   }
 
   .section__two__left_block {
@@ -297,11 +398,6 @@ body {
   }
 
 
-
-  .two__left_h1 {
-    font-size: 46px;
-  }
-
   .section__three {
     margin-top: 37.62px;
   }
@@ -314,17 +410,7 @@ body {
     padding-right: 50px;
   }
 
-  .title__small {
-    font-size: 15px;
-  }
 
-  .text__small {
-    font-size: 11px;
-  }
-
-  .text__medium {
-    font-size: 14px;
-  }
 
   .course_cards {
     max-width: 299px;
@@ -345,24 +431,47 @@ body {
 
   }
 
-  .section_one_p {
-    font-size: 10px;
+  .text__small {
+    font-size: 12px;
   }
 
+  .text__medium {
+    font-size: 14px;
+  }
+
+  .text__big {
+    ont-size: 14px;
+  }
+
+  /* TITLE*/
+
+  .title__small {
+    font-size: 14px;
+    line-height: 130%;
+  }
+
+  .title__medium {
+    font-size: 26px;
+  }
+
+  .title__big {
+    font-size: 37px;
+  }
+
+  /* SECTION 1*/
+
+  /* SECTION 2*/
   .section__two,
   .section__four {
     display: flex;
     flex-direction: column;
   }
 
+
   .section__two__right_block {
     margin: 0px;
   }
 
-
-  .two__left_h1 {
-    font-size: 37px;
-  }
 
   .section__four__right_block {
     margin: 0px;
@@ -374,8 +483,10 @@ body {
   }
 
   .section__two__right_block img {
-    width: 60%;
+    width: 40%;
   }
+
+  /* SECTION 3*/
 
   .section__three {
     margin-top: 37.62px;
@@ -384,4 +495,168 @@ body {
   .section__three img {
     width: 90%;
   }
+
+  /* SECTION 4*/
+
+
+  /* SECTION 5*/
+
+  .section__five__left_block {
+    display: none;
+  }
+
+  .section__five__right_block {
+    margin-bottom: 76px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 80%;
+    padding: 0;
+  }
+
+
+  .rows_style {
+    margin: 0 20px 0 0px;
+  }
+
+  .add_rulle {
+    margin-right: 116px;
+  }
+
+  /* SECTION 6*/
+
+  .section__six__row {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 73px;
+  }
+
+
+  /* SECTION 7*/
+
+  .section__seven {
+    margin-bottom: 73px;
+  }
+
+  /* SECTION 8*/
+
+  .section__eight__title {
+    margin-bottom: 35.66px;
+  }
+
+  .last__card {
+    margin-bottom: 47.16px;
+  }
+
+
+
+  /* SECTION 9 */
+  .mob__version_text {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 150%;
+  }
+
+  .section__nine__title {
+    margin: 42px 32px 0 36px;
+  }
+
+  .user__card {
+    max-width: 85%;
+    height: auto;
+    border-radius: 30px;
+    margin: 0 0 53px 24px;
+    background-color: #FFFFFF;
+    ;
+  }
+
+  .card__text {
+    margin: 20px 20px 5px 20px;
+  }
+
+  .user__info {
+    display: flex;
+    margin-top: 21px;
+  }
+
+  .user__img {
+    flex-basis: 35%;
+    margin: 0;
+    padding: 5px 0 0 0;
+  }
+
+  .user__img img {
+    width: 100%;
+  }
+
+  .name__social i {
+    flex-basis: 60%;
+    margin: 0;
+    padding: 0;
+  }
+
+  /* SECTION 10 */
+
+  .section_ten__title {
+    margin: 62px 0 0 40px;
+  }
+
+
+  .price {
+    font-weight: 400;
+    font-size: 37px;
+    line-height: 101.38%;
+  }
+
+  .course__info {
+    margin: 36.3px 0 0 40px;
+  }
+
+  .additional__info {
+    display: flex;
+  }
+
+  .suggestion__row {
+    margin: 0 10px 0 20px;
+    flex-basis: 50%;
+  }
+
+
+  /* FOOTER */
+  .footer__wrapper {
+    flex-direction: column;
+  }
+  
+  .footer__left,
+  .footer__right {
+    margin: 0 0 0 56.85px;
+  }
+
+  
+
+  .footer__logo {
+    margin: 0 0 13.98px 0;
+  }
+
+  .socials {
+    margin: 0 0 50.45px;
+  }
+
+  .email {
+    margin: 0 0 48.99px 0;
+  }
+  .copyright__one {
+    display: none;
+  }
+
+  .copyright_two {
+    display: block;
+    color: white;
+  }
+  .text_info {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 101.38%;
+  }
+
+
 }
