--- a/style/styles.css
+++ b/style/styles.css
@@ -6,11 +6,23 @@
   font-family: 'Roboto', Helvetica, sans-serif;
 }
 
+.main__wrap, {
+  width: 100%;
+  height: auto;
+}
+
 body {
   margin: 0px;
 }
 
-.wrapper {
+.sectin__nine__main_wide {
+  background-color: #EFEFEF;
+}
+.sectin__ten__main_wide {
+  background-color: #9DC9C8;
+}
+
+.fix_wide__wrap {
   margin: 0px auto;
   max-width: 1280px;
 }
@@ -209,7 +221,7 @@ body {
 .section__nine {
   max-width: 100%;
   height: auto;
-  background-color: #EFEFEF;
+  
 }
 
 .section__nine__title {
@@ -247,7 +259,6 @@ body {
 .section__ten {
   max-width: 100%;
   height: auto;
-  background-color: #9DC9C8;
   display: flex;
   flex-direction: column;
 }
@@ -288,12 +299,16 @@ body {
   FOOTER
 */
 
+footer {
+
+  background-color: black;
+}
+
 .footer__wrapper {
   display: flex;
   justify-content: space-between;
   width: 100%;
   height: auto;
-  background-color: black;
 }
 
 .footer__left {
@@ -348,9 +363,9 @@ body {
 }
 
 @media (max-width: 1279px) {
-  .wrapper {
+  .fix_wide__wrap {
     max-width: 992px;
-    /* padding: 0px 30px 0 30px; */
+    padding: 0px 30px 0 30px;
   }
 
   .text__small {
@@ -410,7 +425,9 @@ body {
     padding-right: 50px;
   }
 
-
+  .user__card {
+    margin: 34px 168px 111px 126px;
+  }
 
   .course_cards {
     max-width: 299px;
@@ -425,7 +442,7 @@ body {
 
 
 @media screen and (max-width: 991px) {
-  .wrapper {
+  .fix_wide__wrap {
     max-width: 320px;
     padding: 0px;
 
@@ -493,7 +510,7 @@ body {
   }
 
   .section__three img {
-    width: 90%;
+    width: 100%;
   }
 
   /* SECTION 4*/
