--- a/style/styles.css
+++ b/style/styles.css
@@ -16,14 +16,14 @@ body {
   margin: 0px;
 }
 
-.sectin__nine__main_wide {
+.section__nine__main_wide {
   background-color: #EFEFEF;
 }
-.sectin__ten__main_wide {
+.section__ten__main_wide {
   background-color: #9DC9C8;
 }
 
-.fix_wide__wrap {
+.fix_size_wide__wrap {
   margin: 0px auto;
   max-width: 1280px;
 }
@@ -300,7 +300,7 @@ body {
   FOOTER
 */
 
-footer {
+.footer_main__wrap {
 
   background-color: black;
 }
@@ -364,7 +364,7 @@ footer {
 }
 
 @media (max-width: 1279px) {
-  .fix_wide__wrap {
+  .fix_size_wide__wrap {
     max-width: 992px;
     padding: 0px 30px 0 30px;
   }
@@ -446,7 +446,7 @@ footer {
 
 
 @media screen and (max-width: 991px) {
-  .fix_wide__wrap {
+  .fix_size_wide__wrap {
     max-width: 320px;
     padding: 0px;
 
